Prevent inner scrollbar in list

--- a/src/css/list.css
+++ b/src/css/list.css
@@ -41,6 +41,7 @@
   padding: 0;
   padding-top: 47px;
   font-size: 0;
+  overflow: hidden;
 }
 
 .listview li {
